Bug 1089090, e10s, support custom cursors, r=jmathies